Fix the overflow for dropdowns

--- a/static/css/global/src/ui-kit-page.scss
+++ b/static/css/global/src/ui-kit-page.scss
@@ -263,6 +263,6 @@ hr {
   max-width: 30em;
 }
 
-body > .card {
+body .card {
   overflow: visible;
 }
